# SwarmCloneLauncher

./: .gitignore  App.axaml  App.axaml.cs  Program.cs  README.md  SwarmCloneLauncher.csproj  SwarmCloneLauncher.sln  ViewLocator.cs  app.manifest  rd.xml  root.xml
.github/workflows/: build-desktop.yml  build.yml
Assets/: Icons.axaml  Information.xaml
Launch/: CMakeLists.txt  crash_log.cpp  crash_log.h  main.cpp  main.h  system_info.cpp  system_info.h
Utils/: AppResource.cs  WebTools.cs
ViewModels/: AboutViewModel.cs  ConsoleViewModel.cs  HomeViewModel.cs  MainWindowViewModel.cs  ManagementViewModel.cs  SettingsViewModel.cs  ViewModelBase.cs
Views/: AboutView.axaml  AboutView.axaml.cs  ConsoleView.axaml  ConsoleView.axaml.cs  HomeView.axaml  HomeView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  ManagementView.axaml  ManagementView.axaml.cs  SettingsView.axaml  SettingsView.axaml.cs
